--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>palway</h2>
 	<h2>palway ggg</h2>
     <h3>kumar</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quam pariatur earum sequi facilis illum, saepe recusandae eaque, aut quibusdam fuga culpa aperiam quia atque exercitationem quas iusto id laborum.</p>
 </body>
 </html>
